[bumpversion]
current_version = 1.2.1alpha1
commit = false
tag = false
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)((?P<release>[a-z]+)(?P<dev>\d+))?
serialize = 
	{major}.{minor}.{patch}{release}{dev}
	{major}.{minor}.{patch}

[metadata]
name = sphinx_rtd_theme
url = https://github.com/readthedocs/sphinx_rtd_theme
license = MIT
author = Dave Snider, Read the Docs, Inc. & contributors
author_email = dev@readthedocs.org
description = Read the Docs theme for Sphinx
long_description = file: README.rst
project_urls = 
	Homepage = https://sphinx-rtd-theme.readthedocs.io/
	Source Code = https://github.com/readthedocs/sphinx_rtd_theme
	Issue Tracker = https://github.com/readthedocs/sphinx_rtd_theme/issues
classifiers = 
	Framework :: Sphinx
	Framework :: Sphinx :: Theme
	Development Status :: 5 - Production/Stable
	License :: OSI Approved :: MIT License
	Environment :: Console
	Environment :: Web Environment
	Intended Audience :: Developers
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Operating System :: OS Independent
	Topic :: Documentation
	Topic :: Software Development :: Documentation

[options]
include_package_data = True
zip_safe = False
packages = sphinx_rtd_theme
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*
install_requires = 
	sphinx >=1.6,<7
	docutils <0.19
	sphinxcontrib-jquery >=2.0.0,!=3.0.0 ; python_version > '3'
tests_require = 
	pytest

[options.extras_require]
dev = 
	transifex-client
	sphinxcontrib-httpdomain
	bump2version
	wheel

[options.entry_points]
sphinx.html_themes = 
	sphinx_rtd_theme = sphinx_rtd_theme

[options.package_data]
sphinx_rtd_theme = 
	theme.conf
	*.html
	static/css/*.css
	static/css/fonts/*.*
	static/js/*.js

[bdist_wheel]
universal = 1

[extract_messages]
mapping_file = babel.cfg
output_file = sphinx_rtd_theme/locale/sphinx.pot
keywords = _ l_ lazy_gettext
add_comments = Translators:

[init_catalog]
domain = sphinx
input_file = sphinx_rtd_theme/locale/sphinx.pot
output_dir = sphinx_rtd_theme/locale/

[update_catalog]
domain = sphinx
input_file = sphinx_rtd_theme/locale/sphinx.pot
output_dir = sphinx_rtd_theme/locale/

[compile_catalog]
domain = sphinx
directory = sphinx_rtd_theme/locale/

[bumpversion:part:release]
optional_value = release
first_value = alpha
values = 
	alpha
	rc
	release

[bumpversion:part:dev]
first_value = 1

[bumpversion:file:setup.py]

[bumpversion:file:sphinx_rtd_theme/__init__.py]

[bumpversion:file:package.json]
search = "version": "{current_version}",
replace = "version": "{new_version}",

[bumpversion:file:docs/changelog.rst]
search = .. |theme_version| replace:: {current_version}
replace = .. |theme_version| replace:: {new_version}
